--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "boilerplate",
-  "version": "0.1.0",
+  "name": "alba-cms",
+  "version": "0.2",
   "private": true,
   "scripts": {
     "seed": "node -r dotenv/config ./seed.js",
