after remove middleware

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 # mongoose
 MONGO_URI=mongodb://localhost:27017/albacms
 # MONGO_URI=mongodb://admin:qtY2un4VwMKmF4yRxPro@remote-pishgaman.runflare.com:32419/admin
-
+JWT_SECRET=secret
 # `openssl rand -base64 32`
 AUTH_SECRET=KfUUMs4VlDekU0LT/cERl29VVPHxufXMogOQ4opWRHU=
 # AUTH_URL=http://localhost:3000/api/auth
