--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-sticky-box": "^2.0.5",
     "reading-time": "^1.5.0",
     "sharp": "^0.33.4",
+    "stable-hash": "^0.0.6",
     "swr": "^2.3.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
